[gd_scene load_steps=2 format=3 uid="uid://dtktiuwmp1rh1"]

[ext_resource type="Script" path="res://flow_graph_view.gd" id="1_sacfu"]

[node name="FlowGraphView" type="GraphEdit"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
right_disconnects = true
script = ExtResource("1_sacfu")
wisp_flow_name = "example"

[node name="chkbtnDSP" type="CheckButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -91.0
offset_top = 4.0
offset_right = -12.0
offset_bottom = 35.0
grow_horizontal = 0
text = "DSP"

[connection signal="delete_nodes_request" from="." to="." method="_on_delete_nodes_request"]
[connection signal="end_node_move" from="." to="." method="_on_end_node_move"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="toggled" from="chkbtnDSP" to="." method="_on_chkbtn_dsp_toggled"]
